--- a/srcs/resources/requirements/nginx/conf/index.html
+++ b/srcs/resources/requirements/nginx/conf/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo</title>
+    <title>betis</title>
 </head>
 <body>
-    <h1>Hola, mundo</h1>
+    <h1>betisssssss</h1>
+	<h2>xddddd</h2>
 </body>
 </html>
 
